型修正
